--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
     "multer": "^2.0.2",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.11",
     "pdf-parse": "^1.1.1",
